test/negative/feature_incrementanddecrement.java

public class feature_incrementanddecrement {
  public feature_incrementanddecrement() {}
  public int m(int x) {
    x++; x--; ++x; return --x;
  }
}

